--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=bgx3dn6enfa9zkx18c6w-mysql.services.clever-cloud.com;Port=3306;Database=bgx3dn6enfa9zkx18c6w;Uid=uuufupekkgueo3ox;Pwd=Ds1f6XKaYQ5ihhLV3qSm;Pooling=true;MinimumPoolSize=0;MaximumPoolSize=5;ConnectionLifeTime=180;"
+    //"DefaultConnection": "server=localhost; port=3306; database=bd_mobiliza; user=root; password=senai2025"
   },
   "AllowedHosts": "*"
 }
